--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,10 +6,19 @@
   --spirited-main-color: #DED2B9;
   --nav-bar-text-color: #0030a0;
   --box-background-color: #018dd32f;
-  --font-titulo: 'Poppins';
+  --font-titulo: 'Montserrat';
 }
 
 *{
   margin: 0;
   padding: 0;
+}
+
+body{
+  background-image: url("/background-nuvem.svg");
+  background-color: var(--action-color);
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: repeat-y;
+  background-position-y: -20px;
 }
