--- a/src/components/header/styles.css
+++ b/src/components/header/styles.css
@@ -13,7 +13,7 @@ header {
 header nav {
     display: flex;
     justify-content: space-between;
-    padding: 0 6%;
+    padding: 2px 6%;
 }
 header nav ul li a {
     display: grid;
@@ -22,7 +22,7 @@ header nav ul li a {
     cursor: pointer;
     font-family: 'Montserrat';
     font-weight: 500;
-    font-size: 14px;
+    font-size: 15px;
 }
 header nav ul li a:hover {
     color: var(--action-color);
@@ -32,7 +32,7 @@ header nav ul {
     align-items: center;
 }
 
-header nav .icones-site {
+header nav > ul {
     gap: 50px;
 }
 header nav .icones-conta {
@@ -46,15 +46,18 @@ header nav ul li {
     list-style: none;
 }
 header nav ul li img {
-    max-width: 50px;
+    max-width: 70px;
 }
 
-header nav ul .button {
-    border-style: solid;
-    border-width: 2px;
+header nav .icones-conta li a {
+    font-size: 14px;
+}
+
+header nav :nth-child(2) li  {
+    box-shadow: 0 0 0 1px;
     border-color: var(--action-color);
     border-radius: 2rem;   
-    padding: 6px 20px;
+    padding: 10px 20px;
 }
 header nav ul #icone-busca {
     border-radius: 50%;
