--- a/src/components/header/styles.css
+++ b/src/components/header/styles.css
@@ -39,12 +39,13 @@ header nav .icones-conta {
     gap: 25px;
 }
 
-header nav ul li {
+/*header nav ul li {
     min-width: fit-content;
     height: fit-content;
     font-size: small;
     list-style: none;
 }
+*/
 header nav ul li img {
     max-width: 70px;
 }
@@ -59,10 +60,10 @@ header nav :nth-child(2) li  {
     border-radius: 2rem;   
     padding: 10px 20px;
 }
-header nav ul #icone-busca {
+/*header nav ul #icone-busca {
     border-radius: 50%;
     padding: 6px;
-}
+}*/
 
 header nav ul #teste-gratis {
     background-color: var(--action-color);
