--- a/src/components/NavItems/styles.css
+++ b/src/components/NavItems/styles.css
@@ -1,17 +1,58 @@
+
 li {
     min-width: fit-content;
     height: fit-content;
-    font-size: small;
     list-style: none;
+    font-weight: 500;
+    cursor: pointer;
+    font-family: 'Montserrat';
+    font-size: 15px;
+    color: var(--nav-bar-text-color);
+    display: grid;
+
+
 }
-li Link{
-    font-family: "Montserrat";
+li a{
+    text-decoration: none;
+    color: var(--nav-bar-text-color);
+
 }
+
+li a:hover, li:hover {
+    color: var(--action-color);
+}
+
 li img {
     max-width: 70px;
 }
 
-#icone-busca {
+
+header nav :nth-child(2) #icone-busca {
     border-radius: 50%;
-    padding: 6px;
+    padding: 7px 8px;
+}
+
+
+#icone-busca > img{
+    width: 20px;
+}
+
+#teste-gratis {
+    background-color: var(--action-color);
+}
+#teste-gratis a {
+    color: var(--text-light);
+}
+
+#teste-gratis:hover {
+    background-color: var(--nav-bar-text-color);
+    box-shadow: 0 0 0 1px var(--nav-bar-text-color);
+
+}
+#login a {
+    color: var(--action-color);
+}
+#login:hover {
+    background-color: var(--box-background-color);
+    box-shadow: 0 0 0 1px var(--box-background-color);
 }
