--- a/src/components/header/styles.css
+++ b/src/components/header/styles.css
@@ -10,23 +10,16 @@ header {
     box-shadow: -0.5rem 0.1rem 1.6rem rgba(0, 0, 0, 0.1);
 }
 
+
+
 header nav {
     display: flex;
     justify-content: space-between;
     padding: 2px 6%;
 }
-header nav ul li a {
-    display: grid;
-    color: var(--nav-bar-text-color);
-    text-decoration: none;
-    cursor: pointer;
-    font-family: 'Montserrat';
-    font-weight: 500;
-    font-size: 15px;
-}
-header nav ul li a:hover {
-    color: var(--action-color);
-}
+
+
+
 header nav ul {
     display: flex;
     align-items: center;
@@ -35,50 +28,18 @@ header nav ul {
 header nav > ul {
     gap: 50px;
 }
-header nav .icones-conta {
+header nav :nth-child(2) {
     gap: 25px;
 }
 
-/*header nav ul li {
-    min-width: fit-content;
-    height: fit-content;
-    font-size: small;
-    list-style: none;
-}
-*/
-header nav ul li img {
-    max-width: 70px;
-}
 
-header nav .icones-conta li a {
+header nav :nth-child(2) li a {
     font-size: 14px;
 }
 
 header nav :nth-child(2) li  {
-    box-shadow: 0 0 0 1px;
-    border-color: var(--action-color);
+    box-shadow: 0 0 0 1px var(--action-color);
     border-radius: 2rem;   
     padding: 10px 20px;
 }
-/*header nav ul #icone-busca {
-    border-radius: 50%;
-    padding: 6px;
-}*/
 
-header nav ul #teste-gratis {
-    background-color: var(--action-color);
-}
-header nav ul #teste-gratis a {
-    color: var(--text-light);
-}
-header nav ul #teste-gratis:hover {
-    background-color: var(--nav-bar-text-color);
-    border-color: var(--nav-bar-text-color);
-}
-header nav ul #login a {
-    color: var(--action-color);
-}
-header nav ul #login:hover {
-    background-color: var(--box-background-color);
-    border-color: transparent;
-}
