--- a/src/components/NavItems/styles.css
+++ b/src/components/NavItems/styles.css
@@ -8,8 +8,6 @@ li {
     font-family: 'Montserrat';
     font-size: 15px;
     color: var(--nav-bar-text-color);
-    display: grid;
-
 
 }
 li a{
@@ -27,7 +25,7 @@ li img {
 }
 
 
-header nav :nth-child(2) #icone-busca {
+#icone-busca {
     border-radius: 50%;
     padding: 7px 8px;
 }
@@ -52,7 +50,8 @@ header nav :nth-child(2) #icone-busca {
 #login a {
     color: var(--action-color);
 }
-#login:hover {
+#login:hover{
     background-color: var(--box-background-color);
     box-shadow: 0 0 0 1px var(--box-background-color);
 }
+
