--- a/src/components/header/styles.css
+++ b/src/components/header/styles.css
@@ -18,6 +18,9 @@ header nav {
     padding: 2px 6%;
 }
 
+header nav :nth-child(2){
+    
+}
 
 
 header nav ul {
@@ -37,9 +40,25 @@ header nav :nth-child(2) li a {
     font-size: 14px;
 }
 
-header nav :nth-child(2) li  {
+header nav :nth-child(2) li{
     box-shadow: 0 0 0 1px var(--action-color);
-    border-radius: 2rem;   
+    border-radius: 3rem;   
     padding: 10px 20px;
 }
+
+header nav :first-child #logo{
+    box-shadow: 0 0 0 1px var(--action-color);
+    border-radius: 3rem;   
+    padding: 6px 16px;
+}
+
+header nav :first-child  #logo:hover{
+    box-shadow: 0 0 0 1px var(--box-background-color);
+    background-color: var(--box-background-color);
+
+}
+
+
+
+
 
