--- a/src/components/footer/styles.css
+++ b/src/components/footer/styles.css
@@ -1,17 +1,18 @@
 footer {
     background-image: url("/footer-image.svg");
     background-size: cover;
-    padding: 20rem 6% 5% 2%;
-    
+    padding: 20rem 6% 5% 6%;
+
     display: flex;
-    text-align: left;
     flex-direction: row;
     justify-content: space-between;
     gap: 40px;
+    text-align: left;
+
 }
 
 
-footer  div{
+footer :first-child {
     max-width: 12rem;
 }
   
@@ -20,6 +21,12 @@ footer .conteudo-ilustrativo-footer {
     display: flex;
     flex-direction: column;
     row-gap: 40px;
+}
+
+footer .conteudo-ilustrativo-footer .copyright{
+    display: flex;
+    align-items: center;
+    margin-bottom: 1rem;
 }
   
 footer .conteudo-ilustrativo-footer .redes-sociais-grupo {
@@ -34,19 +41,18 @@ footer .conteudo-ilustrativo-footer .redes-sociais-grupo > img {
 }
   
   
-footer .conteudo-ilustrativo-footer .copyright .logo-copyright {
+footer .conteudo-ilustrativo-footer .copyright > img {
     margin-right: 0.35rem;
     height: 10px;
 }
   
-footer .conteudo-ilustrativo-footer .copyright .copyright-text {
+footer .conteudo-ilustrativo-footer .copyright > p {
     font-size: 12px;
     color: var(--nav-bar-text-color);
     font-family: var(--font-titulo);
-    margin-bottom: 1rem;
 }
  
-footer .logos-footer {
+footer .logo-footer {
     width: 8rem;
 }
 
