--- a/src/components/header/styles.css
+++ b/src/components/header/styles.css
@@ -6,7 +6,7 @@ header {
     top: 0; 
     width: 100%;
     z-index: 1; 
-    padding: 12px 0;
+    padding: 8px 0;
     box-shadow: -0.5rem 0.1rem 1.6rem rgba(0, 0, 0, 0.1);
 }
 
@@ -15,9 +15,8 @@ header {
 header nav {
     display: flex;
     justify-content: space-between;
-    padding: 2px 6%;
-    font-family: var(--font-titulo);
-    
+    padding: 2px 6%;   
+    font-weight: 500; 
 }
 
 
@@ -29,9 +28,21 @@ header nav ul {
 
 }
 
-header nav > ul {
+header nav :first-child {
     gap: 50px;
+    color: var(--nav-bar-text-color);
+    font-size: 15px;
+
+    
 }
+
+header nav :first-child:hover {
+    color: var(--action-color);
+}
+
+
+
+
 header nav :nth-child(2) {
     gap: 25px;
 }
