--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@
   --spirited-main-color: #DED2B9;
   --nav-bar-text-color: #0030a0;
   --box-background-color: #018dd32f;
-  --font-titulo: 'Montserrat';
+  --font-titulo: 'Scada';
 }
 
 *{
