--- a/src/components/Section1/styles.css
+++ b/src/components/Section1/styles.css
@@ -1,25 +1,13 @@
-.section2 {
-    display: flex;
-    flex-direction: column;
-    padding: 70px 5% 90px 5%;
+.section1 {
     text-align: center;
 }
-.section2 h2:first-child {
-    font-weight: bold;
-    color: var(--text-light);
-    margin-bottom: 5rem;
-    align-self: center;
 
-    font-size: 35px;
-    line-height: 52px;
-    max-width: 70rem;
-}
-
-.section2 .recursos-div{
+.section1 .recursos-div{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
     text-align: center;
+    gap: 2rem;
 }
 
 
