--- a/src/components/Section1/styles.css
+++ b/src/components/Section1/styles.css
@@ -4,6 +4,7 @@
 
 .section1 > h2:first-child {
     color: white;
+    margin-bottom: 5rem;
 }
 
 .section1 .recursos-div{
@@ -12,7 +13,6 @@
     flex-wrap: wrap;
     text-align: center;
     grid-gap: 2rem;
-    width: 80%;
     align-self: center;
 }
 
