--- a/src/components/Section2/styles.css
+++ b/src/components/Section2/styles.css
@@ -1,5 +1,9 @@
 .section2{
-    background-color: white;
+    background-color: var(--text-light);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 7rem 5% 8rem 5%;
 }
 
 .section2 > h2{
@@ -14,4 +18,8 @@
     grid-gap: 5rem;
 }
 
+.section2 #s2{
+    max-width: 20rem;
+    margin-right: 4rem;
+}
 
