--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -25,15 +25,17 @@ header nav ul {
     display: flex;
     align-items: center;
     list-style: none;
+}
 
+
+header nav ul .logo-barra-pesquisa{
+    width: 1.4rem;
 }
 
 header nav :first-child {
     gap: 50px;
     color: var(--nav-bar-text-color);
     font-size: 15px;
-
-    
 }
 
 header nav :first-child:hover {
