--- a/src/components/Section1/styles.css
+++ b/src/components/Section1/styles.css
@@ -16,4 +16,9 @@
     align-self: center;
 }
 
-
+@media screen and (max-width: 1560px) {
+    .section1 .recursos-div{
+        width: 70%;
+        grid-gap: 3.5rem;
+    }
+}
