--- a/src/components/Section2/styles.css
+++ b/src/components/Section2/styles.css
@@ -6,12 +6,10 @@
     padding: 7rem 5% 8rem 5%;
 }
 
-.section2 > h2{
-    color: var(--action-color);
-}
-
 .section2 > :nth-child(2) {
     display: flex;
+
+    flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
     text-align: center;
@@ -20,6 +18,25 @@
 
 .section2 #s2{
     max-width: 20rem;
-    margin-right: 4rem;
+    color: var(--action-color);
+    margin-right: 8rem;
+
 }
 
+@media screen and (max-width: 1540px) {
+    .section2 > :nth-child(2){
+        grid-gap: 2rem;
+    }
+}
+
+@media screen and (max-width: 1435px) {
+    .section2{
+        flex-direction: column;
+        justify-content: center;
+    }
+    .section2 #s2{
+        max-width: 100%;
+        margin:  0 2rem 4rem 2rem;  
+    }
+
+}
