--- a/src/components/Section3/styles.css
+++ b/src/components/Section3/styles.css
@@ -23,3 +23,19 @@
     line-height: 33px;
     text-align: left;
 }
+
+@media screen and (max-width: 1365px) {
+    .section3 > ul{
+        width: 80%;
+        align-self: center;
+        column-gap: 4rem;
+        row-gap: 3rem;
+    }
+
+}
+
+@media screen and (max-width: 1035px) {
+    .section3 > ul{
+        justify-content: space-between;
+    }
+}
