--- a/src/components/Section4/styles.css
+++ b/src/components/Section4/styles.css
@@ -66,3 +66,9 @@
         height: 28rem;
     }
 }
+
+@media screen and (max-width: 1080px) {
+    .section4 > img{
+        display: none;
+    }
+}
