--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -34,30 +34,36 @@ header nav ul .logo-barra-pesquisa{
 
 header nav .ul1 {
     gap: 50px;
-    color: var(--nav-bar-text-color);
-    font-size: 15px;
 }
 
-header nav .ul1:hover {
+header nav .ul1 li a:hover {
     color: var(--action-color);
 }
 
+header nav .ul1 li a {
+    font-size: 15px;
+    color: var(--nav-bar-text-color);
 
+}
 
 
 header nav .ul2 {
     gap: 25px;
+    z-index: 1;
 }
 
 
 header nav .ul2 li a {
     font-size: 14px;
+    color: var(--nav-bar-text-color);
+
 }
 
 header nav .ul2 li{
     box-shadow: 0 0 0 1px var(--action-color);
     border-radius: 3rem;   
     padding: 10px 20px;
+    background-color: var(--text-light);
 }
 
 #logo img {
@@ -67,14 +73,21 @@ header nav .ul2 li{
 
 header nav #logo{
     box-shadow: 0 0 0 1px var(--action-color);
+    background-color: var(--text-light);
     border-radius: 3rem;   
     padding: 6px 16px;
+    margin-right: 25px;
+    z-index: 1;
+
 }
 
 header nav #logo:hover{
     box-shadow: 0 0 0 1px var(--box-background-color);
     background-color: var(--box-background-color);
 
+}
+header nav :first-child{
+    display: flex;
 }
 
 .hamburguer{
@@ -96,11 +109,37 @@ header nav #logo:hover{
 @media (max-width: 1080px) {
     .hamburguer{
         display: block;
+        z-index: 1;
     }
     header nav .ul1{
         position: fixed;
         top: 0;
         left: 0;
-        width: 100vh;
+        width: 100vw;
+        height: 50vh;
+        background-color: var(--action-color);
+        clip-path: circle(100px at 90% -30%);
+        transition: 0.5s ease-out;
+        padding-top: 20px;
+
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        gap: 0;
+        pointer-events: none;
+    }
+    header .nav.active .ul1{
+        clip-path: circle(1500px at 90% -30%);
+        pointer-events: all;
+    }
+    header .nav.active .ul1 li a{
+        color: var(--text-light);
+    }
+    header .nav.active .hamburguer{
+        border-top: 3px solid var(--text-light);
+
+    }
+    header .nav.active .hamburguer::before, header .nav.active .hamburguer::after{
+        background-color: var(--text-light);
     }
 }
