--- a/src/components/NavItems/styles.css
+++ b/src/components/NavItems/styles.css
@@ -11,7 +11,7 @@
 
 #icone-busca {
     border-radius: 50%;
-    padding: 6px 8px;
+    padding: 6px 7px;
 }
 
 
@@ -33,3 +33,8 @@
     box-shadow: 0 0 0 1px var(--box-background-color);
 }
 
+@media (max-width: 1080px) {
+    #teste-gratis {
+        display: none;
+    }
+}
