--- a/src/components/Section3/styles.css
+++ b/src/components/Section3/styles.css
@@ -39,3 +39,9 @@
         justify-content: space-between;
     }
 }
+
+@media screen and (max-width: 624px) {
+    .section3 > ul {
+        justify-content: center;
+    }
+}
